(Mostly) stand-alone page.
update logo according to current recipe on
  "Project page > Project Admin > Analytics";
remove dependence on external css, replace with short inline;
remove dependence on blank.gif for layout & colour;

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,8 +1,18 @@
 <HTML>
 <HEAD>
 <TITLE>PerlUnit: unit testing framework for Perl</TITLE>
-<LINK rel="stylesheet" href="http://sourceforge.net/sourceforge.css" type="text/css">
-<base href="http://PerlUnit.sourceforge.net/"><!-- so I can test my local copy -->
+<style type="text/css">
+  /* Old extract of http://sourceforge.net/sourceforge.css */
+  BODY { background-color: #FFFFFF; font-family: arial,helvetica,sans-serif; }
+  A { text-decoration: none; color #6666FF; }
+  A:visited { text-decoration: none; color: #6666AA; }
+  A:link { text-decoration: none; color: #6666AA; }
+  A:active { text-decoration: none; color: #6666AA; }
+  A:hover { text-decoration: none; color: #FF6666 }
+  OL,UL,P,BODY,TD,TR,TH,FORM,SPAN { font-family: arial,helvetica,sans-serif;color: #333333 }
+  H1,H2,H3,H4,H5,H6 { font-family: arial,helvetica,sans-serif }
+  PRE,TT { font-family: courier,sans-serif }
+</style>
 </HEAD>
 
 <BODY bgcolor=#FFFFFF topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" marginheight="0" marginwidth="0">
@@ -12,14 +22,14 @@
   <TR valign="middle" bgcolor="#eeeef8">
     <TD>
       <!-- SF logo as requested in the SF docs -->
-      <A href="http://sourceforge.net"><IMG src="http://sourceforge.net/sflogo.php?group_id=2653&type=1" width="88" height="31" border="0" alt="SourceForge Logo"></A>
+      <a href="http://sourceforge.net/projects/perlunit"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=2653&amp;type=15" width="150" height="40" alt="Get PerlUnit at SourceForge.net. Fast, secure and Free Open Source software downloads" /></a>
     </TD>
     <td align="center"><h1>The &quot;PerlUnit&quot; unit testing framework</h1></td>
     <TD><!-- right of logo -->
       <a href="http://www.valinux.com"><IMG src="http://sourceforge.net/images/va-btn-small-light.png" align="right" alt="VA Linux Systems" border="0" width="105" height="31"></A>
     </TD><!-- right of logo -->
   </TR>
-  <TR><TD bgcolor="#543a48" colspan="3"><IMG src="http://sourceforge.net/images/blank.gif" height="2" vspace="0"></TD></TR>
+  <TR><TD style="background-color:#543a48; height: 2px" colspan="3"> </td></TR>
 </TABLE>
 <!-- end top title table -->
 
