minimal announcement of new Git repository.
(more later)

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -68,6 +68,11 @@
     There are also some web-based forums but we've mostly abandoned
     them because we don't like the user interface.
 
+<li>Browse the <a href="http://perlunit.git.sourceforge.net/git/gitweb.cgi?p=perlunit/perlunit;a=summary">Git repository</a>.
+  <br />
+  This contains a curated cvs2git import of the CVS repository, and
+  will carry future development of the code and this web page.
+
 <li>Browse the
     <a href="http://cvs.sourceforge.net/viewcvs.py/perlunit/">
 
