poking about with update recipe.
grubby symlink
 from htdocs
 to checked out head,
  makes current version visible
  provided the refs are not packed;
link cvs2git (thanks guys!);
another website pull incantation

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -70,7 +70,9 @@
 
 <li>Browse the <a href="http://perlunit.git.sourceforge.net/git/gitweb.cgi?p=perlunit/perlunit;a=summary">Git repository</a>.
   <br />
-  This contains a curated cvs2git import of the CVS repository, and
+  This contains a curated
+  <a href="http://cvs2svn.tigris.org/cvs2git.html">cvs2git</a>
+  (v2.3.0) import of the CVS repository, and
   will carry future development of the code and this web page.
 
 <li>Browse the
