--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -14,7 +14,16 @@
   PRE,TT { font-family: courier,sans-serif }
 
   /* New style */
-  ul.top > li { margin-top: 1em }
+  ul.top > li { margin-top: 1.5em }
+
+  dl { margin: 0.75em }
+  dl.branches dd { margin-bottom: 0.75ex }
+  dl.branches dt { font-family: courier,sans-serif }
+
+  dl.faq dd { margin-bottom: 1ex; margin-left: 0 }
+  dl.faq dt:before { content: 'Q: ' }
+  dl.faq dd:before { content: 'A: ' }
+
 </style>
 </HEAD>
 
@@ -75,17 +84,37 @@
   (v2.3.0) import of the CVS repository, and
   will carry future development of the code and this web page.
 
+  <dl class="branches">
+    <dt>master</dt>
+    <dd>The PerlUnit source code, which was addressed in CVS
+      as <tt>Test-Unit</tt> or <tt>src/Test-Unit</tt></dd>
+
+    <dt>website</dt>
+    <dd>Contains the website
+      <a href="http://perlunit.sourceforge.net/">http://perlunit.sourceforge.net/</a>, which was addressed in CVS as <tt>www</tt>.</dd>
+
+    <dt>cvs/*</dt>
+    <dd>Branches and tags representing the corresponding cvs2git
+      imports.</dd>
+
+    <dt>attic/*</dt>
+    <dd>For posterity.</dd>
+  </dl></li>
+
 <li>Browse the
     <a href="http://cvs.sourceforge.net/viewcvs.py/perlunit/">
 
     CVS repository</a> to see the current state of our files.  A quick
     outline of what's there:
 
-  <dl>
+  <dl class="branches">
    <dt>src/Test-Unit</dt>
    <dd>This is the source for the distributed package.</dd>
 
-   <dt>src/Test-Unit-0.06, src/UnitTests, src/XUnit-0.01, src/api</dt>
+   <dt>src/Test-Unit-0.06</dt>
+   <dt>src/UnitTests</dt>
+   <dt>src/XUnit-0.01</dt>
+   <dt>src/api</dt>
    <dd>Old layouts of the project, everything is in the Attic.  Ignore.</dd>
 
    <dt>src/junit3.2</dt>
@@ -111,6 +140,31 @@
    above.
 
 </p>
+
+<h2>FAQ</h2>
+Or more honestly, questions I imagine may be asked.
+
+<dl class="faq">
+  <dt>Is this project dead?</dt>
+  <dd>The code can never die because it is available under the
+    Artistic / GPL dual licence.  Sourceforge has shown good long-term
+    reliability for keeping version control repositories intact and
+    available.</dd>
+
+  <dt>So is the project alive?</dt>
+  <dd>Not very.  It has been sleeping for a long time and currently
+    has failing tests in the latest release.</dd>
+
+  <dt>Does anybody use it?</dt>
+  <dd>As recently as 2011, users have piped up to ask for help.  Some
+    of them have large codebases to maintain.</dd>
+
+  <dt>Is it on <a href="http://github.com">Github</a>?</dt>
+  <dd>Yes.  You are welcome to fork from
+    <a href="https://github.com/mca-wtsi/perlunit">mca-wtsi/perlunit</a>
+    but that is not the "official" repository.</dd>
+</dl>
+
 
 <h2>Links related to PerlUnit aka. Test-Unit</h2>
 
