--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,38 +1,8 @@
 <HTML>
 <HEAD>
-<TITLE>PerlUnit: unit testing framework for Perl</TITLE>
-<style type="text/css">
-  /* Old extract of http://sourceforge.net/sourceforge.css */
-  BODY { background-color: #FFFFFF; font-family: arial,helvetica,sans-serif; }
-  A { text-decoration: none; color #6666FF; }
-  A:visited { text-decoration: none; color: #6666AA; }
-  A:link { text-decoration: none; color: #6666AA; }
-  A:active { text-decoration: none; color: #6666AA; }
-  A:hover { text-decoration: none; color: #FF6666 }
-  OL,UL,P,BODY,TD,TR,TH,FORM,SPAN { font-family: arial,helvetica,sans-serif;color: #333333 }
-  H1,H2,H3,H4,H5,H6 { font-family: arial,helvetica,sans-serif }
-  PRE,TT { font-family: courier,sans-serif }
-
-  /* New style */
-  ul.top > li { margin-top: 1.5em }
-
-  dl { margin: 0.75em }
-  dl.branches dd { margin-bottom: 0.75ex }
-  dl.branches dt { font-family: courier,sans-serif }
-
-  dl.faq dd { margin-bottom: 1ex; margin-left: 0 }
-  dl.faq dt:before { content: 'Q: ' }
-  dl.faq dd:before { content: 'A: ' }
-
-  pre.pasteme {
-    border: thin #555 dotted;
-    margin: 0.75ex 0.5ex;
-    padding: 0.5ex;
-  }
-
-</style>
+  <TITLE>PerlUnit: unit testing framework for Perl</TITLE>
+  <link rel="stylesheet" type="text/css" href="shared.css" media="all" />
 </HEAD>
-
 <BODY bgcolor=#FFFFFF topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" marginheight="0" marginwidth="0">
 
 <!-- top title table -->
