current website HEAD: iframe or hyperlink.
restrict dl.branches width so the float:right doesn't get lost;
bring body margins to css;
abbreviate commitid to save width;
use the shared.css;
lookup time seems OK, don't flaunt it;
iframe content must <a target=_parent>

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -3,7 +3,7 @@
   <TITLE>PerlUnit: unit testing framework for Perl</TITLE>
   <link rel="stylesheet" type="text/css" href="shared.css" media="all" />
 </HEAD>
-<BODY bgcolor=#FFFFFF topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" marginheight="0" marginwidth="0">
+<BODY>
 
 <!-- top title table -->
 <TABLE width="100%" border=0 cellspacing=0 cellpadding=0 bgcolor="" valign="center">
@@ -83,9 +83,20 @@
     <dd>The PerlUnit source code, which was addressed in CVS
       as <tt>Test-Unit</tt> or <tt>src/Test-Unit</tt></dd>
 
-    <dt>website</dt>
-    <dd>Contains the website
-      <a href="http://perlunit.sourceforge.net/">http://perlunit.sourceforge.net/</a>, which was addressed in CVS as <tt>www</tt>.</dd>
+    <dt>website
+      <div class="head">
+	<iframe title="This page version"
+		 src="http://perlunit.sourceforge.net/cgi-bin/clone-state.pl">
+	  (<a href="http://perlunit.sourceforge.net/cgi-bin/clone-state.pl">This page</a>
+	  tells the current HEAD checked out on the website.)
+	</iframe>
+      </div>
+    </dt>
+    <dd>
+      Contains the website
+      <a href="http://perlunit.sourceforge.net/">http://perlunit.sourceforge.net/</a>,
+      which was addressed in CVS as <tt>www</tt>.
+    </dd>
 
     <dt>cvs/*</dt>
     <dd>Branches and tags representing the corresponding cvs2git
