layout for wide screen; faq indent

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -21,7 +21,7 @@
 </TABLE>
 <!-- end top title table -->
 
-
+<div class="main">
 
 <p>If you don't know what a unit testing framework is or why you would
    want one, the <a href="#related">links</a> below will fill you in.
@@ -213,5 +213,6 @@ may help you start your investigations.
     </ul>
     ...many more.
 
+</div>
 </BODY>
 </HTML>
